The overflow issue has been fixed. Those rules aren't needed anymore, hopefully.

--- a/frontend/src/shared/components/baseCard/baseCard.css
+++ b/frontend/src/shared/components/baseCard/baseCard.css
@@ -51,7 +51,6 @@
      * visible prevents the card from clipping */
     overflow: auto;
     height: 100%;
-    scrollbar-width: none;
 }
 
 .card-content {
